--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
             <li>
-                <a class="nav-link" href="{% url 'category' %}">Categories</a>
+                <a class="nav-link" href="{% url 'categories' %}">Categories</a>
             </li>
             <!-- show menu items for registered users -->
             {% if user.is_authenticated %}
