--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -10,7 +10,7 @@
         {% if category.listings.count > 0 %}
             <div id="listing_block">
                 <!-- display category name and link to its page -->
-                <a id="listing_category" href="{% url 'categories' category.id %}">{{ category.title }} >></a>
+                <a id="listing_category" href="{% url 'category_detail' category.id %}">{{ category.title }} >></a>
                 <ul>
                     <!-- loop through listings displaying only those that belong to this category -->
                     {% for listing in listings %}
@@ -18,7 +18,7 @@
                     <li>
                         <div id="listing_title">
                             <!-- link to the item description page -->
-                            <a href="{% url 'item_detail' listing.id %}">{{ listing.title }}</a>
+                            <a href="{% url 'listing_detail' listing.id %}">{{ listing.title }}</a>
                         </div>
                         <!-- display the price -->
                         <div id="listing_price">%
