--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -37,7 +37,7 @@
                                 <a class="dropdown-item" href="{% url 'index' %}">My Bids</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'index' %}">Watchlist</a>
+                                <a class="dropdown-item" href="{% url 'watchlist' %}">Watchlist</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'index' %}">My Purchases</a>
