--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -34,19 +34,19 @@
                                 <a class="dropdown-item" href="/admin/">Admin</a>
                             {% endif %}
                             <li>
-                                <a class="dropdown-item" href="{% url 'index' %}">My Bids</a>
-                            </li>
-                            <li>
                                 <a class="dropdown-item" href="{% url 'watchlist' %}">Watchlist</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'index' %}">My Purchases</a>
+                                <a class="dropdown-item" href="{% url 'selling' %}">My Listings</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'index' %}">My Listings</a>
+                                <a class="dropdown-item" href="{% url 'bids' %}">My Bids</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'index' %}">Sell</a>
+                                <a class="dropdown-item" href="{% url 'purchases' %}">My Purchases</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'sell' %}">Sell On Auctioneers!</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
