--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -2,14 +2,30 @@
 
 {% block body %}
     <h2>{{ listing.title }}</h2>
+    <div>{{ listing.price }}</div>
 
+    {% if message %}
+        <div>{{ message }}</div>
+    {% endif %}
+        </div>
     <div>
-        <!-- watchlist button appears if user is not seller-->
+        <!-- watchlist & bid buttons appears if user is not seller-->
         {% if user.is_authenticated and listing.seller.id != user.id %}
-        <form action="{% url 'listing_detail' listing.id %}" method="POST">
-            {% csrf_token %}
+            <div>Bid on this item</div>
+
+            <!-- Bid Button -->
+            <form action="{% url 'listing_detail' listing.id %}" method="POST">
+                {% csrf_token %}
+                <label for="bid_amount" name="bid_amount">Bid Amount $</label>
+                <input type="number" id="bid_amount" name="bid_amount"step="0.01" min="0.01" required>
+                <button type="submit" name="action" value="bid">Place Bid</button>
+            </form>
+
+            <!-- watchlist button -->
+            <form action="{% url 'listing_detail' listing.id %}" method="POST">
+                {% csrf_token %}
                 <input type="hidden" name="listing_id" value="{{ listing.id }}">
-                <button type="submit">
+                <button type="submit" name="action" value="toggle_watchlist">
                     {% if listing in user.watchlist.all %}
                         Remove from Watchlist
                     {% else %}
@@ -17,6 +33,7 @@
                     {% endif %}
                 </button>
             </form>
-            {% endif %}
+
+        {% endif %}
     </div>
 {% endblock %}
