--- a/auctions/templates/auctions/bids.html
+++ b/auctions/templates/auctions/bids.html
@@ -13,7 +13,7 @@
             {% for bid in bids %}
             <li>
                 <div>
-                    <a href="{% url 'listing_detail' bid.listing.id %}">{{ bid.listing.title }}  {{ bid.listing.closing_date }}</a>
+                    <a href="{% url 'listing_detail' bid.listing.id %}">{{ bid.listing.title }}  {{ bid.listing.closing_time }}</a>
                 </div>
                 <div>
                     {{ bid.timestamp }}<br>&emsp;Bid Amount: {{ bid.amount }}
