--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -2,6 +2,7 @@
 
 {% block body %}
     <h2>{{ listing.title }}</h2>
+    <div>{{ listing.description }}</div>
     <div>Current Bid: {{ listing.price }}</div>
 
     
