--- a/auctions/templates/auctions/sell.html
+++ b/auctions/templates/auctions/sell.html
@@ -5,17 +5,21 @@
 
     <div>
         {% if user.is_authenticated %}
-            <form action="{% url 'sell' %}" method="POST">
+            <form action="{% url 'sell' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <!-- create css for container -->
+                <label for="category" class="form-label">Category</label>
                 <div>
-                    <label for="category" class="form-label">Category</label>
                     <select id="category" class="form-select" name="category" required>
                         <option value="" disabled selected>Select a category</option>
                         {% for item in categories %}
                             <option value="{{ item.id }}">{{ item.title }}</option>
                         {% endfor %}
                     </select>
+                </div>
+                <label for="image" class="form-label">Image</label>
+                <div>
+                    <input type="file" name="image" required>
                 </div>
 
                 <label for="title" class="form-label">Title</label>
