--- a/auctions/templates/auctions/selling.html
+++ b/auctions/templates/auctions/selling.html
@@ -8,9 +8,13 @@
     <div>
         <ul>
             {% for listing in listings %}
-            <li>
-                <a href="{% url 'listing_detail' listing.id  %}">{{ listing.title }}</a>
-            </li>
+                <li>
+                    {% if listing.seller.id == user.id %}
+                        <a href="{% url 'sell' listing.id %}">{{ listing.title }}</a>
+                    {% else %}
+                        <a href="{% url 'listing_detail' listing.id %}">{{ listing.title }}</a>                                
+                    {% endif %}
+                </li>
             {% endfor %}
         </ul>
     </div>
