--- a/auctions/templates/auctions/category_detail.html
+++ b/auctions/templates/auctions/category_detail.html
@@ -8,7 +8,7 @@
             {% if listing.category == category %}
             <li>
                 <div id="listing_block">
-                    {% include "auctions/user_seller_routing.html" with listing=listing user=user %}                
+                    <a href="{% url 'listing_detail' listing.id %}">{{ listing.title }}</a>                
                 </div>
             </li>
             {% endif %}
