--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <!-- loop through listings displaying only those that belong to this category -->
                     {% for listing in listings %}
-                        {% if listing.category.id == category.id %}
+                        {% if listing.category.id == category.id and listing.is_open %}
                         <li>
                             <div id="listing_title">
                                 <a href="{% url 'listing_detail' listing.id %}">{{ listing.title }}</a>                            
