--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -46,7 +46,7 @@
                                 <a class="dropdown-item" href="{% url 'purchases' %}">My Purchases</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'sell' %}">Sell On Auctioneers!</a>
+                                <a class="dropdown-item" href="{% url 'sell' %}">Create a Listing</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
