--- a/auctions/templates/auctions/sell.html
+++ b/auctions/templates/auctions/sell.html
@@ -2,6 +2,11 @@
 
 {% block body %}
     <h2>Sell Something!</h2>
+    {% if message %}
+        <div>
+            {{ message }}
+        </div>
+    {% endif %}
     <div>
         {% if user.is_authenticated %}
             <form action="" method="POST" enctype="multipart/form-data">
