--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -1,19 +1,21 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-<h2>Watchlist</h2>
+    <h2>Watchlist</h2>
 
-<div>
-    {% if watchlist %}
-        <ul>
-            {% for listing in watchlist %}
-                <li>
-                    <a href="{% url 'listing_detail' listing.id  %}">{{ listing.title }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        Your watchlist is empty
-    {% endif %}
-</div>
+    <div>
+        {% if user.is_authenticated %}
+            {% if watchlist %}
+                <ul>
+                    {% for listing in watchlist %}
+                        <li>
+                            <a href="{% url 'listing_detail' listing.id  %}">{{ listing.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                Your watchlist is empty
+            {% endif %}
+        {% endif %}
+    </div>
 {% endblock %}
